# rist-bonding

./: .dockerignore  .envrc  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  TESTING.md  TESTING_MIGRATION_COMPLETE.md  build_and_overlay_rist.sh  build_gstreamer.sh  docker-compose.ci.yml  docker-compose.yml  plan.md  report.md  rist-bonding.code-workspace  run_convergence_test.sh  run_test.sh  setup_gstreamer_env.sh  test_enhanced_scenarios_demo.rs  test_metrics_debug.rs  test_simple_video.rs  verify-build.sh
.cargo/: config.toml
.devcontainer/: README.md  dev-helper.sh  devcontainer.code-workspace  devcontainer.json
.github/: copilot-instructions.md
crates/bench-cli/: Cargo.toml  README.md
crates/bench-cli/src/: commands.rs  main.rs
crates/bench-cli/tests/: cli_tests.rs  general_cli.rs  list_command.rs  run_command.rs  stats_command.rs  up_command.rs
crates/demos/: Cargo.toml  README.md
crates/demos/src/: enhanced_scheduler.rs  test_netns_demo.rs  test_network_sim_demo.rs
crates/integration_tests/: Cargo.toml  README.md
crates/integration_tests/examples/: end_to_end_test.rs
crates/integration_tests/src/: element_pad_semantics.rs  lib.rs
crates/integration_tests/tests/: automated_integration.rs
crates/netns-testbench/: Cargo.toml  README.md
crates/netns-testbench/src/: addr.rs  bench.rs  cellular.rs  lib.rs  netns.rs  qdisc.rs  runtime.rs  veth.rs
crates/netns-testbench/tests/: integration.rs
crates/network-sim/: Cargo.toml  README.md
crates/network-sim/src/: docker.rs  lib.rs  link.rs  namespace.rs  nsapi.rs  qdisc.rs  runtime.rs  types.rs
crates/network-sim/tests/: concurrent_bandwidth_validation.rs  docker_integration.rs  four_links_ingress_udp.rs  loss_validation.rs  proof_of_concept.rs  quick_validation.rs  simplified_throughput_test.rs  smoke_ingress.rs  smoke_tc.rs  throughput_validation.rs
crates/observability/: Cargo.toml  README.md
crates/observability/src/: collector.rs  exporter.rs  gstreamer.rs  lib.rs  metrics.rs  recorder.rs  server.rs
crates/rist-elements/: Cargo.toml  README.md  build.rs  correction.md  plan.md
crates/rist-elements/src/: dispatcher.rs  dynbitrate.rs  lib.rs  test_harness.rs  testing.rs
crates/rist-elements/src/dispatcher/: duplication.rs  element.rs  health.rs  metrics.rs  mod.rs  pads.rs  props.rs  state.rs  stats.rs  timers.rs
crates/rist-elements/src/dispatcher/scheduler/: drr.rs  mod.rs  swrr.rs
crates/rist-elements/src/dispatcher/strategy/: aimd.rs  ewma.rs  mod.rs
crates/rist-elements/tests/: README.md  bonded_links_static_stress.rs  dispatcher_unit.rs  element_pad_semantics.rs  ewma_algorithm.rs  faults.md  gstreamer_pipeline_tests.rs  integration_tests.rs  netns_race_car_integration.rs  network_integration.rs  otherplan.md  performance_evaluation.rs  plan.md  quad_links_bonding_modes.rs  realistic_network_evaluation.rs  recovery_scenarios.rs  rist_integration.rs  scenario_tests.rs  single_link_test.rs  static_bandwidths_networks_test.rs  stats_driven_rebalancing.rs  stats_polling.rs  stress_pad_lifecycle.rs  stress_tests.rs  unit_swrr_algorithm.rs  unit_tests.rs  weighted_flow.rs
crates/rist-elements/tests/integration/: automated_e2e.rs  backpressure_simulation.rs  cross_element_integration.rs  dynbitrate_behavior.rs  dynbitrate_keyframes.rs  dynbitrate_stats_edge_cases.rs  edge_case_coverage.rs  element_integration.rs  error_misuse_scenarios.rs  error_recovery.rs  extended_rebalancing.rs  hysteresis_warmup.rs  keyframe_duplication.rs  lifecycle_state_management.rs  metrics_accuracy.rs  metrics_debug.rs  metrics_export.rs  mod.rs  network_integration.rs  network_simulation.rs  pad_removal_simple.rs  performance_benchmarks.rs  pipeline_tests.rs  property_debug.rs  runtime_updates.rs  thread_safety.rs
crates/rist-elements/tests/scenarios/: mod.rs  recovery_scenarios.rs  rist_integration.rs  stats_driven_rebalancing.rs  weighted_flow.rs
crates/rist-elements/tests/stress/: mod.rs  pad_lifecycle.rs  stats_polling.rs
crates/rist-elements/tests/unit/: aimd_algorithm.rs  ewma_algorithm.rs  mod.rs  swrr_algorithm.rs
crates/scenarios/: Cargo.toml  README.md
crates/scenarios/examples/: demo.rs
crates/scenarios/src/: builder.rs  direction.rs  lib.rs  link.rs  presets.rs  scenario.rs  schedule.rs  utils.rs
debug_test/: Cargo.toml  main.rs
docker/: Dockerfile.network-sim  Dockerfile.receiver  Dockerfile.sender  docker-compose.yml
docs/: architecture.md  local_testing.md
examples/: Cargo.toml  race_car_complete_demo.rs  race_car_demo.rs
netlink-sim/: Cargo.toml
netlink-sim/examples/: complete_api_demo.rs  comprehensive_test.rs
netlink-sim/src/: enhanced.rs  lib.rs
netlink-sim/tests/: enhanced_tests.rs
ristlab/: Cargo.toml
ristsmart/: Cargo.toml
ristsmart-netem/: Cargo.toml  README.md
ristsmart-netem/examples/: cellular.json  dual_cellular.json
ristsmart-netem/src/: builder.rs  errors.rs  forwarder.rs  ge.rs  handle.rs  lib.rs  metrics.rs  ns.rs  ou.rs  qdisc.rs  types.rs  util.rs
ristsmart-netem/tests/: basic_functionality.rs  bidirectional_feedback.rs  integr_cellular.rs
ristsmart-tests/: Cargo.toml
ristsmart-tests/core/: Cargo.toml
ristsmart-tests/core/src/: emulation.rs  lib.rs  metrics.rs  pipelines.rs  plots.rs  util.rs  weights.rs
ristsmart-tests/core/src/scenarios/: asymmetric_bw.rs  baseline.rs  blackhole.rs  burst_loss.rs  high_rtt.rs  mod.rs  recovery.rs  time_varying.rs
ristsmart-tests/src/: lib.rs
ristsmart-tests/tests/: debug_stats_polling.rs  elem_pad_semantics.rs  elem_weighted_flow.rs  metrics_contract.rs  recovery_scenarios.rs  stats_driven_logic.rs  test_rist_integration.rs  test_rist_real_integration.rs  test_with_mainloop.rs  unit_alg_swrrobin.rs  unit_ewma.rs
ristsmart/src/: dispatcher.rs  dynbitrate.rs  lib.rs  test_harness.rs  testing.rs
ristsmart/tests/: element_pad_semantics.rs  ewma_algorithm.rs  integration_tests.rs  network_integration.rs  recovery_scenarios.rs  rist_integration.rs  stats_driven_rebalancing.rs  stats_polling.rs  stress_pad_lifecycle.rs  unit_swrr_algorithm.rs  weighted_flow.rs
(+57 files in other folders)
