[package]
name = "gst-rist-smart"
version = "0.1.0"
edition = "2021"
description = "Rust GStreamer elements: RIST-aware dispatcher and dynamic bitrate controller"
license = "MIT OR Apache-2.0"

[lib]
name = "gstristsmart"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.98"
thiserror = "2.0.12"
parking_lot = "0.12.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"

# GStreamer Rust bindings (match system GStreamer version; 0.24 aligns with GStreamer 1.24)
gstreamer = { version = "0.24.0", features = ["v1_24"] }
gstreamer-base = { version = "0.24.0", features = ["v1_24"] }
gstreamer-rtp = { version = "0.24.0", features = ["v1_24"] }
gstreamer-video = { version = "0.24.0", features = ["v1_24"] }

# For subclassing custom elements
gstreamer-app = { version = "0.24.0", features = ["v1_24"] }
gstreamer-audio = { version = "0.24.0", features = ["v1_24"] }

once_cell = "1.21.3"

[build-dependencies]

[features]
default = []
