[package]
name = "race_car_complete_demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "race_car_complete_demo"
path = "race_car_complete_demo.rs"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = "0.3"

# Local crates with enhanced features
netlink-sim = { path = "netlink-sim", features = ["enhanced"] }
scenarios = { path = "crates/scenarios" }
observability = { path = "crates/observability" }