[package]
name = "race_car_complete_demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "race_car_complete_demo"
path = "race_car_complete_demo.rs"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = "0.3"

# Local crates with enhanced features
scenarios = { path = "../crates/scenarios" }