[package]
name = "netlink-sim"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
rand = { version = "0.8", features = ["std", "std_rng"] }
tracing = "0.1"
serde_json = "1.0"

# Local crates for enhanced functionality
scenarios = { path = "../crates/scenarios", optional = true }
observability = { path = "../crates/observability", optional = true }

[dev-dependencies]
tracing-subscriber = "0.3"
tempfile = "3.8"

[features]
default = []
enhanced = ["scenarios", "observability"]
