[package]
name = "ristsmart-netem"
version = "0.1.0"
edition = "2021"

[dependencies]
rtnetlink = "0.13"
netlink-packet-route = "0.17"
netlink-packet-core = "0.7"
netlink-sys = "0.8"
neli = "0.6"
nix = { version = "0.27", features = ["sched", "socket", "net"] }
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
libc = "0.2"
# Additional netlink support for TC (qdisc) operations
netlink-packet-utils = "0.5"
byteorder = "1.0"

[[bin]]
name = "emulator"
path = "src/bin/emulator.rs"
