[package]
name = "ristsmart-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gstreamer = "0.24"
gstreamer-base = "0.24"
gstreamer-video = "0.24"
gstreamer-app = "0.24"
glib = "0.21"
once_cell = "1"
ristsmart = { package = "gst-rist-smart", path = "../ristsmart", features = ["test-plugin"] }
