[package]
name = "ristsmart-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
chrono = { version = "0.4", features = ["clock"] }
rand = "0.8"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
plotters = "0.3"
plotters-svg = "0.3"

glib = "0.21"
gstreamer = "0.24"
gstreamer-base = "0.24"
gstreamer-video = "0.24"
gstreamer-app = "0.24"
gstreamer-rtp = "0.24"

once_cell = "1"

# Your crates (adjust names/paths as in your workspace)
gst-rist-smart = { path = "../ristsmart", features = ["test-plugin"] }
ristsmart-tests-core = { path = "./core" }
ristsmart-netem = { path = "../ristsmart-netem" }

[features]
# Force data-plane mode (error if RIST elements not present)
rist = []
