[package]
name = "gst-rist-smart"
version = "0.1.0"
edition = "2021"
description = "Rust GStreamer elements: RIST-aware dispatcher and dynamic bitrate controller"
license = "MIT"

[lib]
name = "gstristsmart"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.98"
thiserror = "2.0.12"
parking_lot = "0.12.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"

gstreamer = { version = "0.24.0"}
gstreamer-base = { version = "0.24.0"}
gstreamer-rtp = { version = "0.24.0"}
gstreamer-video = { version = "0.24.0"}

gstreamer-app = { version = "0.24.0"}
gstreamer-audio = { version = "0.24.0"}

once_cell = "1.21.3"

[build-dependencies]

[features]
default = []
test-plugin = []
