[package]
name = "gst-rist-smart"
version = "0.1.0"
edition = "2021"
description = "Rust GStreamer elements: RIST-aware dispatcher and dynamic bitrate controller"
license = "MIT"

[lib]
name = "gstristsmart"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.99"
thiserror = "2.0.14"
parking_lot = "0.12.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"

gstreamer = { version = "0.24.1"}
gstreamer-base = { version = "0.24.0"}
gstreamer-rtp = { version = "0.24.0"}
gstreamer-video = { version = "0.24.1"}

gstreamer-app = { version = "0.24.0"}
gstreamer-audio = { version = "0.24.0"}

once_cell = "1.21.3"

# Test dependencies (only when test-plugin feature is enabled)
glib = { version = "0.21", optional = true }

[dev-dependencies]
# Dependencies for integration tests
csv = "1"
chrono = { version = "0.4", features = ["clock"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
plotters = "0.3"
plotters-svg = "0.3"

[build-dependencies]

[features]
default = ["test-plugin"]
test-plugin = ["glib"]
