[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }

# Local crates
netlink-sim = { path = "../../netlink-sim", features = ["enhanced"] }
scenarios = { path = "../scenarios" }
observability = { path = "../observability" }

[dev-dependencies]
tracing-subscriber = "0.3"