[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }

# GStreamer dependencies
gstreamer = "0.24.1"
glib = "0.21.1"

# Local crates
netns-testbench = { path = "../netns-testbench" }
scenarios = { path = "../scenarios" }
observability = { path = "../observability" }
gstristelements = { package = "rist-elements", path = "../rist-elements", features = ["test-plugin"] }

[dev-dependencies]
tracing-subscriber = "0.3"
serial_test = "2"