[package]
name = "netns-testbench"
version = "0.1.0"
edition = "2021"
description = "Linux network namespace testbench for RIST bonding with netlink-based qdisc control"
license = "MIT"

[dependencies]
# Network namespace and netlink support
nix = { version = "0.29", features = ["process", "mount", "sched"] }
rtnetlink = "0.14"
netlink-packet-route = "0.24"
ipnetwork = "0.21"

# For async stream combinators
futures = "0.3"

# Async runtime and utilities
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"

# Data structures and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

# Local dependencies
scenarios = { path = "../scenarios" }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio-test = "0.4"
tempfile = "3.8"
futures = "0.3"

[features]
default = []
# Feature for CAP_NET_ADMIN tests (requires sudo)
sudo-tests = []