[package]
name = "network-sim"
version = "0.1.0"
edition = "2021"
description = "Simple network simulation library for applying fixed network parameters"

[features]
default = []
docker = ["futures"]

[dependencies]
log = "0.4.27"
tokio = { version = "1.47.1", features = ["full"] }
thiserror = "2.0.16"
futures = { version = "0.3.31", optional = true }

[dev-dependencies]
futures = "0.3.31"
