[package]
name = "rist-elements"
version = "0.1.0"
edition = "2021"
description = "Rust GStreamer elements: RIST-aware dispatcher and dynamic bitrate controller"
license = "MIT"

[lib]
name = "gstristelements"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.99"
thiserror = "2.0.16"
parking_lot = "0.12.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

gstreamer = { version = "0.24.1"}
gstreamer-base = { version = "0.24.0"}
gstreamer-rtp = { version = "0.24.0"}
gstreamer-video = { version = "0.24.1"}

gstreamer-app = { version = "0.24.0"}
gstreamer-audio = { version = "0.24.0"}

once_cell = "1.21.3"

# Test dependencies (only when test-plugin feature is enabled)
glib = { version = "0.21.1", optional = true }
network-sim = { path = "../network-sim", optional = true }
tokio = { version = "1.47.1", features = ["full"], optional = true }

[dev-dependencies]
# Dependencies for unit and integration tests
csv = "1.3.1"
chrono = { version = "0.4.41", features = ["clock", "serde"] }
rand = "0.9.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
plotters = "0.3.7"
plotters-svg = "0.3.7"

# Integration test specific dependencies
anyhow = "1.0.99"
serde_json = "1.0.143"
serial_test = "3.2.0"

[build-dependencies]

[features]
default = ["test-plugin", "network-sim"]
test-plugin = ["glib"]
network-sim = ["dep:network-sim", "tokio"]
