[package]
name = "scenarios"
version = "0.1.0"
edition = "2021"
description = "Network scenario definitions and presets for RIST testbench"
license = "MIT"

[dependencies]
anyhow = "1.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }