[package]
name = "ristsmart-tests-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
chrono = { version = "0.4", features = ["clock"] }
rand = "0.8"
tracing = "0.1"
plotters = "0.3"
plotters-svg = "0.3"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }

glib = "0.21"
gstreamer = "0.24"
gstreamer-base = "0.24"
gstreamer-video = "0.24"
gstreamer-app = "0.24"
gstreamer-rtp = "0.24"

once_cell = "1"

# Your crates
gst-rist-smart = { path = "../../ristsmart", features = ["test-plugin"] }
ristsmart-netem = { path = "../../ristsmart-netem" }
